--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
+title: CVAE-GLRM
+description: Conditional Variational AutoEncoder - Graph Laplacian Regularized Model
 show_downloads: true
+google_analytics:
 remote_theme: pages-themes/cayman@v0.2.0
