--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,4 @@
+# This file is used in PyPI package building to instruct setuptools on additional files to include in the distribution
 include requirements.txt
+include LICENSE
+include src/VERSION
