--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,4 +2,19 @@ sphinx-substitution-extensions
 sphinx-tabs
 sphinx-toolbox
 sphinxcontrib-jquery
-sdeper
+numpy
+scipy
+pandas
+networkx
+matplotlib
+scikit-learn
+numba
+openpyxl
+tensorflow-cpu
+scanpy
+scikit-misc
+seaborn
+umap-learn
+distinctipy
+reportlab
+opencv-python
