--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,4 @@ seaborn==0.11.2
 umap-learn==0.5.3
 distinctipy==1.2.2
 reportlab==4.1.0
-opencv-python==4.6.0.66
+opencv-python-headless==4.6.0.66
