--- a/.github/workflows/test-installation.yml
+++ b/.github/workflows/test-installation.yml
@@ -36,7 +36,7 @@ jobs:
       fail-fast: false  # all job combinations will run to completion even if one of them fails
       matrix:  # uses a matrix strategy to run multiple test configurations across different operating systems and Python versions
         os: ["ubuntu-latest"]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10"]
     steps:
       - uses: actions/checkout@v4
       
@@ -169,7 +169,7 @@ jobs:
       fail-fast: false  # all job combinations will run to completion even if one of them fails
       matrix:  # uses a matrix strategy to run multiple test configurations across different operating systems and Python versions
         os: ["ubuntu-latest"]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10"]
     steps:
       - uses: actions/checkout@v4
       
