--- a/meta.yaml
+++ b/meta.yaml
@@ -23,7 +23,7 @@ build:
 
 requirements:
   host:
-    - python >=3.9,<=3.10
+    - python >=3.9,<=3.10  # conda treats 3.9 as 3.9.*, 3.10 as 3.10.*, different with PyPI
     - pip
   run:
     - distinctipy ==1.2.2
