--- a/.github/workflows/publish-docker_image.yml
+++ b/.github/workflows/publish-docker_image.yml
@@ -11,9 +11,8 @@
 
 name: Publish SDePER Docker image
 
-on:
-  release:
-    types: [published]
+on: push
+ 
 
 jobs:
   push_to_registry:
@@ -45,6 +44,10 @@ jobs:
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ secrets.DOCKER_USERNAME }}/sdeper
+          
+      - name: Workflow tag
+        run: |
+          echo "Workflow generated tag: ${{ steps.meta.outputs.tags }}"
 
       - name: Build and push Docker image
         id: push
@@ -53,12 +56,12 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ env.VERSION_NUMBER }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/sdeper:${{ env.VERSION_NUMBER }}  # we should use full tag name (https://github.com/docker/build-push-action/issues/535)
           #labels: ${{ steps.meta.outputs.labels }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v3
         with:
-          subject-name: index.docker.io/my-docker-hub-namespace/my-docker-hub-repository
+          subject-name: index.docker.io/${{ secrets.DOCKER_USERNAME }}/sdeper
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
