--- a/meta.yaml
+++ b/meta.yaml
@@ -22,13 +22,14 @@ build:
     - {{ pin_subpackage('sdeper', max_pin="x.x") }}
 
 requirements:
+  # ref: https://docs.conda.io/projects/conda-build/en/stable/resources/package-spec.html#package-match-specifications
+  # bioconda requires Packages and their version constraints must be space separated
   host:
     - python >=3.9,<=3.10  # conda treats 3.9 as 3.9.*, 3.10 as 3.10.*, different with PyPI
     - pip
   run:
     - distinctipy ==1.2.2
     - matplotlib-base ==3.5.2
-    - networkx ==2.8.4
     - numba ==0.59.1
     - numpy ==1.26.4
     - openpyxl ==3.0.10
@@ -40,11 +41,14 @@ requirements:
     - scikit-misc ==0.1.4
     - scipy ==1.11.4
     - seaborn ==0.13.2
-    - tensorflow-base 2.15.0 cpu_*  # explicitly specify to use cpu version out from cpu_, cuda, eigen_, gpu_, or mkl_ in conda packages
+    - tensorflow-base =2.15.0=cpu_*  # explicitly specify to use cpu version out from cpu_, cuda, eigen_, gpu_, or mkl_ in conda packages
     - umap-learn ==0.5.3
-    - libopencv ==4.9.0 headless_* # install opencv in conda requires installing these 3 packages, headless version is used
+    - libopencv =4.9.0=headless_* # install opencv in conda requires installing these 3 packages, headless version is used
     - opencv ==4.9.0
     - py-opencv ==4.9.0
+   
+  run_constrained:
+    - tensorflow-base <2.16
 
 test:
   commands:
